--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t futumans/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run CI=true futumans/docker-react npm run test -- --coverage
+  - docker run -e CI=true futumans/docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
