--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
-  app: "docker-react" 
-  env: "Dockerreact-env"
+  app: "docker-react1" 
+  env: "Dockerreact1-env"
   bucket_name: "elasticbeanstalk-us-east-1-652213986584"
-  bucket_path: "docker-react"
+  bucket_path: "docker-react1"
   on:
     branch: main
   access_key_id: "$AWS_ACCESS_KEY"
