--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ before_install:
 script:
   - docker run -e CI=true futumans/docker-react npm run test -- --coverage
 
+language: minimal
+
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
@@ -18,6 +20,5 @@ deploy:
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
   edge: true
