--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,19 @@
 language: node_js
 node_js:
 - 11.6.0
-cache: npm 
+cache: yarn
 
 install:
-  - npm ci
+  - yarn ci
 
 script: 
+  - yarn test 
+  - yarn run build
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  
+  on: 
+    branch: main
