--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 
 script: 
   - npm test 
-  - npm run build
+  - yarn run build
 
 deploy:
   provider: pages
@@ -16,4 +16,4 @@ deploy:
   github-token: $GITHUB_TOKEN
   
   on: 
-    branch: main
+    branch: master
